Developed Dice Functionality
- Added Dice Rolls Object To Hold Dice Sum
- Implemented Graph to Display Sum Freq
- Added Basic Dice Roll Simulation

--- a/client/src/styles/Dice.css
+++ b/client/src/styles/Dice.css
@@ -10,6 +10,11 @@
   align-items: center;
 }
 
+.dice--logic-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .dice--main {
   display: flex;
 }
